# Automata

./: Automata.code-workspace
Automata/: AutomataApp.swift  ContentView.swift
Automata.xcodeproj/: project.pbxproj
Automata.xcodeproj/xcuserdata/nick.xcuserdatad/xcschemes/: xcschememanagement.plist
AutomataTests/: AutomataTests.swift
AutomataUITests/: AutomataUITests.swift  AutomataUITestsLaunchTests.swift
pico_w_display/: Cargo.toml  memory.x  rust-toolchain.toml
pico_w_display/.cargo/: config.toml
pico_w_display/src/: fonts.rs  grid.rs  main.rs
ws_2812_level_shift/: ws_2812_level_shift.kicad_prl  ws_2812_level_shift.kicad_pro  ws_2812_level_shift.kicad_sch
